quicklog/tests/failures/struct_missing_serialize.stderr
error[E0277]: the trait bound `A: quicklog::serialize::Serialize` is not satisfied
  --> tests/failures/struct_missing_serialize.rs:14:5
   |
14 |     info!(s1, "struct does not implement Serialize");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `quicklog::serialize::Serialize` is not implemented for `A`
   |
   = help: the following other types implement trait `quicklog::serialize::Serialize`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `quicklog::queue::CursorMut::<'buf>::write_serialize`
  --> src/queue/chunk.rs
   |
   |     pub fn write_serialize<T: Serialize>(&mut self, arg: &T) -> WriteResult<()> {
   |                               ^^^^^^^^^ required by this bound in `CursorMut::<'buf>::write_serialize`
   = note: this error originates in the macro `info` (in Nightly builds, run with -Z macro-backtrace for more info)
